--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,9 @@ description:
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
 # date_format: "ordinal"
-date_format: "%Y年%m月%d日"
+#date_format: "%Y年%m月%d日"
+date_format: "%Y年%m月%d日"  # e.g. 2014-07-03
+time_format: "%H:%M:%S"     # 24 hour time
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
@@ -112,3 +114,7 @@ google_analytics_tracking_id:
 # Facebook Like
 #facebook_like: false
 facebook_like: true
+
+# Disqus Comments
+# disqus_short_name: https-blackhawk888-github-io
+# disqus_show_comment_count: false
