octopress-theme-classic

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://blackhawk888.github.io
+url: http://blackhawk888.github.io/octopress-test
 title: Wivern Blog
 subtitle: Personal-Tech memorandum
 author: wivern
